# externaldns-webhook

./: Cargo.toml  Dockerfile  README.md  e_d.Dockerfile  helm-value.yaml  rust-toolchain.toml  test-helm-value.yaml
.cargo/: config.toml
.github/workflows/: e_d.yml
dnsmasq/: Dockerfile
examples/dumb/: helm-value.yaml  main.rs
examples/e_d/: helm-value.yaml  main.rs
examples/e_d/dnsmasq/: Containerfile  dnsmasq.conf  dnsmasq.yaml  reload.sh
src/: changes.rs  domain_filter.rs  endpoint.rs  lib.rs  provider.rs  status.rs  webhook.rs  webhook_json.rs
