[package]
name = "externaldns-webhook"
version = "2025.12.8"
description = "Interface (trait) for ExternalDns(v0.15.0) webhook."
edition = "2024"
license = "BSD-2-Clause"
repository = "https://github.com/Magicloud/externaldns-webhook"
readme = "README.md"
keywords = ["kubernetes", "external-dns"]
categories = ["api-bindings"]

[lib]
name = "externaldns_webhook"
path = "src/lib.rs"

[[example]]
name = "e_d"

[dependencies]
actix-web = { version = "4" }
eyre = { version = "0.6" }
tokio = { version = "1.48", features = ["rt"] }
async-trait = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
regex = { version = "1.11" }
serde_with = { version = "3.12" }
log = { version = "0.4" }
logcall = { version = "0.1" }
dashmap = { version = "6.1", features = ["serde"] }
prometheus = { version = "0.14" }

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs"] }
env_logger = { version = "0.11" }
clap = { version = "4.5", features = ["derive"] }
metrics-prometheus = { version = "0.11" }
metrics = { version = "0.24" }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
