[package]
name = "externaldns-webhook"
version = "2026.2.23"
description = "Interface (trait) for ExternalDns(v0.15.0) webhook."
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Magicloud/externaldns-webhook"
readme = "README.md"
keywords = ["kubernetes", "external-dns"]
categories = ["api-bindings"]

[lib]
name = "externaldns_webhook"
path = "src/lib.rs"

[[example]]
name = "e_d"

[dependencies]
actix-web = { version = "4" }
tracing-actix-web = { version = "0.7" }
eyre = { version = "0.6" }
tokio = { version = "1", features = ["rt"] }
async-trait = { version = "0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
regex = { version = "1" }
serde_with = { version = "3" }
tracing = { version = "0.1" }

[dev-dependencies]
color-eyre = { version = "0.6" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
env_logger = { version = "0.11" }
clap = { version = "4", features = ["derive"] }
tracing-error = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.32" }
opentelemetry = { version = "0.31" }
opentelemetry_sdk = { version = "0.31" }
opentelemetry-appender-tracing = { version = "0.31" }
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
    "logs",
    "trace",
    "metrics",
    "grpc-tonic",
] }
opentelemetry-stdout = { version = "0.31" }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
